--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
     <script src="https://accounts.google.com/gsi/client" async defer></script>
 
     <script>
+
+
+
         function handleCredentialResponse(response) {
 
             // Google Token : ID_TOKEN
@@ -35,13 +38,16 @@
 
             const body = { id_token: response.credential };
 
-            fetch('http://localhost:8082/api/auth/google', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(body)
-            })
+            fetch(window.location.hostname.includes('localhost')
+
+                ? 'http://localhost:8082/api/auth/google' : 'https://restserver-curso-node-matu2982.herokuapp.com/api/auth/google',
+                {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(body)
+                })
                 .then(resp => resp.json())
                 .then(resp => {
                     console.log(resp)
