--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <h1>Google Sign-in</h1>
     <hr>
 
-    <div id="g_id_onload" data-client_id="1053100306019-e1uucr5jecg05u7oqlse1uapq13e4hi6.apps.googleusercontent.com"
+    <div id="g_id_onload" data-client_id=""
         data-auto_prompt="false" data-callback="handleCredentialResponse">
     </div>
     <div class="g_id_signin" data-type="standard" data-size="large" data-theme="outline" data-text="sign_in_with"
