--- a/public/index.html
+++ b/public/index.html
@@ -1,77 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Google Sign-in</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <h1>Google Sign-in</h1>
-    <hr>
+    <hr />
+    <!-- 1011636582399-001j8td0ftv0gnolch73krobdnducfv0.apps.googleusercontent.com -->
+    <div
+      id="g_id_onload"
+      data-client_id=""
+      data-auto_prompt="false"
+      data-callback="handleCredentialResponse"
+    ></div>
+    <div
+      class="g_id_signin"
+      data-type="standard"
+      data-size="large"
+      data-theme="outline"
+      data-text="sign_in_with"
+      data-shape="rectangular"
+      data-logo_alignment="left"
+    ></div>
 
-    <div id="g_id_onload" data-client_id=""
-        data-auto_prompt="false" data-callback="handleCredentialResponse">
-    </div>
-    <div class="g_id_signin" data-type="standard" data-size="large" data-theme="outline" data-text="sign_in_with"
-        data-shape="rectangular" data-logo_alignment="left">
-    </div>
-
-    <button id="google_signout">
-        Signout
-    </button>
-
+    <button id="google_signout">Signout</button>
 
     <script src="https://accounts.google.com/gsi/client" async defer></script>
 
     <script>
+      function handleCredentialResponse(response) {
+        // Google Token : ID_TOKEN
+        // console.log('ID_TOKEN: ', response.credential);
 
+        const body = { id_token: response.credential };
 
+        fetch(
+          window.location.hostname.includes("localhost")
+            ? "http://localhost:8082/api/auth/google"
+            : "https://curso-node-apirestserver-production.up.railway.app",
+          {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify(body),
+          }
+        )
+          .then((resp) => resp.json())
+          .then((resp) => {
+            console.log(resp);
+            localStorage.setItem("email", resp.usuario.correo);
+          })
+          .catch(console.warn);
+      }
 
-        function handleCredentialResponse(response) {
+      const button = document.getElementById("google_signout");
+      button.onclick = () => {
+        console.log(google.accounts.id);
+        google.accounts.id.disableAutoSelect();
 
-            // Google Token : ID_TOKEN
-            // console.log('ID_TOKEN: ', response.credential);
-
-            const body = { id_token: response.credential };
-
-            fetch(window.location.hostname.includes('localhost')
-
-                ? 'http://localhost:8082/api/auth/google' : 'https://restserver-curso-node-matu2982.herokuapp.com/api/auth/google',
-                {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify(body)
-                })
-                .then(resp => resp.json())
-                .then(resp => {
-                    console.log(resp)
-                    localStorage.setItem('email', resp.usuario.correo)
-                })
-                .catch(console.warn);
-        }
-
-        const button = document.getElementById('google_signout');
-        button.onclick = () => {
-
-            console.log(google.accounts.id);
-            google.accounts.id.disableAutoSelect();
-
-            google.accounts.id.revoke(localStorage.getItem('email'), done => {
-
-                localStorage.clear();
-                location.reload();
-
-            });
-
-        }
-
+        google.accounts.id.revoke(localStorage.getItem("email"), (done) => {
+          localStorage.clear();
+          location.reload();
+        });
+      };
     </script>
-</body>
-
+  </body>
 </html>
