Modificaciones para railway 2

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <!-- 1011636582399-001j8td0ftv0gnolch73krobdnducfv0.apps.googleusercontent.com -->
     <div
       id="g_id_onload"
-      data-client_id=""
+      data-client_id="1011636582399-001j8td0ftv0gnolch73krobdnducfv0.apps.googleusercontent.com"
       data-auto_prompt="false"
       data-callback="handleCredentialResponse"
     ></div>
