--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
         // console.log('ID_TOKEN: ', response.credential);
 
         const body = { id_token: response.credential };
-
+        /* hola */
         fetch(
           window.location.hostname.includes("localhost")
             ? "http://localhost:8082/api/auth/google"
