--- a/public/index.html
+++ b/public/index.html
@@ -48,19 +48,25 @@
         .catch(console.warn);
     }
 
-    const button = document.getElementById("google_signout");
-    button.onclick = () => {
-      console.log(google.accounts.id);
+    // const button = document.getElementById("google_signout");
+    // button.onclick = () => {
+    //   console.log(google.accounts.id);
+    //   google.accounts.id.disableAutoSelect();
+
+    //   google.accounts.id.revoke(localStorage.getItem("email"), (done) => {
+    //     localStorage.clear();
+    //     location.reload();
+    //   });
+    // };
+
+    function cerrarSesion() {
       google.accounts.id.disableAutoSelect();
 
-      google.accounts.id.revoke(localStorage.getItem("email"), (done) => {
+      google.accounts.id.revoke(localStorage.getItem('email'), done => {
         localStorage.clear();
         location.reload();
       });
     };
-
-
-
 
   </script>
 </body>
